--- a/vignettes/SIDFEx-vignette.Rmd
+++ b/vignettes/SIDFEx-vignette.Rmd
@@ -33,9 +33,11 @@ SIDFEx comprises forecasts of how certain assets ("targets") drift with the Arct
 
 The package allows you to download SIDFEx forecasts and corresponding observations, to explore which forecasts are available, and to analyse the forecasts and assess their quality. Among other things, functions are provided to remap (interpolate) the time axes of forecasts and observations and to rotate forecast trajectories - for example to correct their initial location (if required) or to derive real-time forecast from slightly outdated forecasts by adjusting the trajectories such that the latest observed location is accounted for.
 
+This user guide is meant to help you getting started with the SIDFEx package, taking you from the installation over data retrieval to a number of analysis examples. After reading this guide and applying the code chunks, possibly with your own modifications, you should be equipped with the basic knowledge needed to start exploring and analysing the SIDFEx data in more detail. We would be more than happy if you could share any insights you get with us, and we are glad to help and/or discuss should you have any technical or scientific questions or suggestions.
+
 ## Requirements and setting up the SIDFEx package
 
-The package has been developed on and for UNIX (Mac/Linux) systems and will likely fail on Windows. In case you are eager to analyse SIDFEx data but are restricted to Windows systems (which we expect to be an unlikely combination), please contact us and we can consider taking better care of platform independence.
+The package has been developed on and for UNIX (Mac/Linux) systems and might fail on Windows. In case you are eager to analyse SIDFEx data but are restricted to Windows systems and encounter problems, please contact us and we can consider taking better care of platform independence.
 
 Given that the drift trajectories are defined on a sphere, operations such as finding the centroid of a point cloud or adjusting (*rotating*) trajectories necessitate somewhat complex computations. For such tasks, `SIDFEx` makes use of another R-package `spheRlab`, which is not on CRAN but can be obtained from GitHub (just like `SIDFEx`). You can download the package from <https://github.com/FESOM/spheRlab> and build and install it manually; general explanations for how to do that can be found easily online. Alternatively, you can use the `devtools` package, which is available from CRAN and can thus in turn be installed directly by running `install.packages("devtools")`. Then, to install `spheRlab` with `devtools`, run
 ```{r, eval = FALSE}
@@ -67,20 +69,20 @@ res = sidfex.download.fcst()
 
 After successful retrieval, you will find the plain-text forecast files in the specified data directory (see above) in subdirectories named by the `GroupID`s of the forecast centres.
 
-In fact, this function retrieves not only the forecast data, but also an index of the data (which you will now also find in the corresponding directory). The index facilitates exploring and working with the data considerably. Once a local copy of the data and a corresponding index exist, the index also allows one to compare the local data with the remote data to see what new data is available. To compare, run
+In fact, this function retrieves not only the forecast data, but also an index of the data (which you will now also find in the corresponding directory). The index is basically a table stored in a native R file format (`data.frame`), each row representing a single forecast file with specific information about this forecast. Therefore this table can easily be used to find certain forecasts based on criteria on the columns, comparable to tables in a database management system. The index thus facilitates exploring and working with the data considerably. Once a local copy of the data and a corresponding index exist, the index also allows one to compare the local data with the remote data to see what new data is available. To compare, run
 ```{r}
 res = sidfex.download.fcst(comparison.mode = TRUE, from.scratch = FALSE)
 ```
 
 If not too many new forecasts are available and if you want to save download volume, you can rerun the function with `comparison.mode = FALSE` and `from.scratch = FALSE` to retrieve only individual new files. However, `from.scratch = TRUE` will be faster most of the time.
 
-It can be convenient to have the index of the (local) forecast data available in a local variable. To dump the index into a data frame named `index` and to get an overview of its content, run
+It can be convenient to have the index of the (local) forecast data available in a local variable. To dump the index into a data frame (a type of table common in R) named `index` and to get an overview of its content, run
 ```{r}
 index = sidfex.load.index()
 str(index)
 ```
 
-The first line of the output tells us how many forecast trajectories ("`obs.`", counting all members of ensemble forecasts individually) are available, and how many "`variables`" the index provides, which are listed underneath. For example, the `$TragetID` column provides the target each forecast corresponds to. We can list all targets by typing
+The first line of the output tells us how many forecast trajectories ("`obs.`" = number of rows, counting all members of ensemble forecasts individually; note that this has nothing to do with actual *observed* buoy positions, but is R-internal terminology for `data.frame` objects) are available, and how many columns ("`variables`") the index provides, which are listed underneath. For example, the `$TargetID` column provides the target each forecast corresponds to. We can list all targets by selecting the corresponding column of the index table as follows:
 ```{r}
 unique(index$TargetID)
 ```
@@ -102,7 +104,7 @@ systms = paste(index$GroupID, index$MethodID, sep = "_")
 systms_unique = unique(systms)
 tbl = as.data.frame(matrix(nrow = length(systms_unique), ncol = 4))
 rownames(tbl) = systms_unique
-colnames(tbl) = c("nFcst", "leadtime-range", "enssize", "nTimeSteps")
+colnames(tbl) = c("nFcst", "leadtimerange", "enssize", "nTimeSteps")
 for (i in 1:length(systms_unique)) {
   indices = (systms == systms_unique[i])
   tbl[i,1] = sum(indices)
@@ -113,7 +115,7 @@ for (i in 1:length(systms_unique)) {
 print(tbl)
 ```
 
-The table reveals that all quantities considered vary considerably between the systems. We find for example that short-range (`leadtime-range<=10days`) forecasts tend to be deterministic (`enssize=1`) whereas long-range forecasts tend to be probabilistic (`enssize=1`).
+The table reveals that all quantities considered vary considerably between the systems. We find for example that short-range (`leadtimerange<=10days`) forecasts tend to be deterministic (`enssize=1`) whereas long-range forecasts tend to be probabilistic (`enssize>1`).
 
 Similarly, in the following example we explore with how much delay relative to real-time the forecasts have been submitted to SIDFEx. Using the default parameters of the `quantile()` function, we get the 0%,25%,...,100% quantiles of the delay distributions, looping over the available forecast systems:
 ```{r}
@@ -135,7 +137,7 @@ subindex2 = sidfex.fcst.search.extractFromTable(gid = "ecmwf001", mid = "SEAS5",
 nrow(subindex2)
 ```
 
-The output reveals how many forecasts have been selected by these two sets of criteria. Obviously we can explore a subindex as we explored the complete index in the examples above. More importantly, we can use a subindex to read and analyse the corresponding sets of forecasts as described in the following.
+The output reveals how many forecasts have been selected by these two sets of criteria. No matter if it has been generated manually or with `sidfex.fcst.search.extractFromTable()`, a subindex has the same structure as the complete index, but with only the selected rows retained. Obviously we can explore a subindex as we explored the complete index in the examples above. More importantly, we can use a subindex to read and analyse the corresponding sets of forecasts as described in the following.
 
 ## Reading forecast and observational data
 
@@ -299,10 +301,9 @@ Those quantities starting `ens.mean` relate to the ensemble-mean position or the
 A rather specific function of this package can be used to produce formatted plots of the relative drift speed and angle. (The function works currently only with ensemble-mean data, or with non-merged ensembles; aspect ratios are more optimised with `device="pdf"`, or can be adjusted with other arguments, see `?sidfex.plot.speedangle`.)
 ```{r}
 colbar = sidfex.plot.speedangle(read.fcst.res = fcst.adj.init, points.type = "b", col.by = "DaysLeadTime", device = NULL)
-sl.plot.colbar(colbar, do.init.device = FALSE)
 ```
 
-The quantity and unit defining the colourbar is *lead time (days)*. The cross in the upper middle marks the perfect-forecast point. The plot reveals for this particular case that during the first couple of days (red colours) the ensemble-mean forecast drift is considerably slower than the observed drift, but in a realistic direction (at least after the very first days). At longer lead times, the ensemble-mean drift is still slightly slower (approx. 75% relative drift speed) and about 45° to the left of the observed trajectory. Note that these realtive speed and angle errors, like those generated with `sidfex.evaluate()`, consider the *integrated* drift since the initial time and location, not the *current* drift.
+The quantity and unit defining the colours is *lead time (days)*, in this case from red=0 to blue=124; to plot a corresponding colourbar, type `sl.plot.colbar(colbar,do.init.device=FALSE)`. The cross in the upper middle marks the perfect-forecast point. The plot reveals for this particular case that during the first couple of days (red colours) the ensemble-mean forecast drift is considerably slower than the observed drift, but in a realistic direction (at least after the very first days). At longer lead times, the ensemble-mean drift is still slightly slower (approx. 75% relative drift speed) and about 45° to the left of the observed trajectory. Note that these relative speed and angle errors, like those generated with `sidfex.evaluate()`, consider the *integrated* drift since the initial time and location, not the *current* drift.
 
 The following is an example that comes closer to a useful quantitative (and comparative) analysis than the mostly single-case-based examples considered above. We consider all forecasts for `TargetID="300234061872720"` initialised between December 1st 2018 and March 15th 2019 from all forecast methods that have provided at least weakly forecasts, tolerating gaps (missing forecast for certain initial times) where they exist. We then compare some forecast error statistics for the first ten days between the forecast methods, including an assessment of statistical confidence by adding two-standard-errors-margins to the plots. On the way, we recycle different code chunks from above to inspect the data.
 ```{r}
@@ -312,7 +313,7 @@ systms = paste(subind.allmethods$GroupID, subind.allmethods$MethodID, sep = "_")
 systms_unique = unique(systms)
 tbl = as.data.frame(matrix(nrow = length(systms_unique), ncol = 4))
 rownames(tbl) = systms_unique
-colnames(tbl) = c("nFcst", "leadtime-range", "enssize", "nTimeSteps")
+colnames(tbl) = c("nFcst", "leadtimerange", "enssize", "nTimeSteps")
 for (i in 1:length(systms_unique)) {
   indices = (systms == systms_unique[i])
   tbl[i,1] = sum(indices)
@@ -323,7 +324,7 @@ for (i in 1:length(systms_unique)) {
 print(tbl)
 ```
 
-The only ensemble forecast method we keep is `nrl001_navyespc-subseasonal` because it provides weekly ensembles and thus allows some meaningful statistics over the 3.5-months period considered. Note that `nFcst` here needs to be divided by the ensemble size to get the actual number of forecast *ensembles*. Since we want to derive forecast error statistics across different initial times for each of the selected forecast methods separately, and only then compare the results between the systems, we execute a loop where we define different subindices for each forecast method and apply the same analysis chain to all of them separately. We store only the respective final output of `sidfex.evaluate()` in a list with one element for each forecast method:
+Note that in case of ensemble forecasts `nFcst` here needs to be divided by the ensemble size to get the actual number of forecast *ensembles*. In the following we keep only those methods with more than 10 forecasts (forecast ensembles) available for the considered 3.5-months time period, allowing some meaningful statistics. This criterium is met by all deterministic forecast methods (`enssize=1`) and one of the ensemble forecast methods (`nrl001_navyespc-subseasonal`) because it provides weekly ensembles. Since we want to derive forecast error statistics across different initial times for each of the selected forecast methods separately, and only then compare the results between the systems, we execute a loop where we define different subindices for each forecast method and apply the same analysis chain to all of them separately. We store only the respective final output of `sidfex.evaluate()` in a list with one element for each forecast method:
 ```{r}
 systms_selected = systms_unique[(tbl$nFcst / tbl$enssize > 10)]
 Nmethods = length(systms_selected)
